--- a/#src/scss/_UI.scss
+++ b/#src/scss/_UI.scss
@@ -19,13 +19,28 @@
     }
 }
 
+.page-title{
+    font-family: Akrobat;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 30px;
+    line-height: 160%;
+    font-feature-settings: 'pnum' on, 'lnum' on;
+    color: #141622;
+    margin-top: 33px;
+    margin-bottom: 38px;
+    width: 100%;
+    padding-left: 50px;
+    text-align: left;
+}
+
 .btn{
     display:inline-block;
     // padding: 17.5px 40px;
-    @include adaptive-value('padding-top', 17.5, 10, 3);
-    @include adaptive-value('padding-bottom', 17.5, 10, 3);
-    @include adaptive-value('padding-left', 40, 25, 3);
-    @include adaptive-value('padding-right', 40, 25, 3);
+    @include adaptive-value('padding-top', 17, 10, 3);
+    @include adaptive-value('padding-bottom', 17, 10, 3);
+    @include adaptive-value('padding-left', 55, 25, 3);
+    @include adaptive-value('padding-right', 55, 25, 3);
     font-family: Akrobat;
     font-style: normal;
     font-weight: 900;
@@ -38,6 +53,8 @@
     display: inline-flex;
     justify-content: center;
     align-items: center;
+    border:none;
+    outline: none;
 
     &:hover{
         cursor:pointer;
@@ -57,11 +74,78 @@
         }
     }
 
+    &.btn_light{
+        border: 2px solid rgba(65, 112, 183, 0.3);
+        color:$blue;
+        transition: border 0.3s;
+
+        i{
+            margin-right: 10px;
+        }
+
+        &:hover{
+            border: 2px solid #4170B7;
+        }
+    }
+
     &.btn_small{
         padding: 11px 18px;
         font-size: 15px;
     }
     
+}
+
+.link{
+    font-family: Akrobat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 133%;
+    font-feature-settings: 'pnum' on, 'lnum' on;
+    color: #4170B7;
+
+    img{
+        margin-left: 7px;
+    }
+}
+
+.breadcrumbs{
+    list-style: none;
+    display: flex;
+    margin: 32px 0;
+    padding: 0 50px;
+
+
+    &__item{
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 13px;
+        line-height: 138%;
+        font-feature-settings: 'pnum' on, 'lnum' on;
+        color: #141622;
+        margin: 0 25px;
+
+        &:first-child{
+            margin-left: 0;
+        }
+    }
+
+    &__link{
+        color: $blue;
+        position: relative;
+
+        &::after{
+            content: "";
+            display: block;
+            background-color: #E7E7E7;
+            width: 16px;
+            height: 1px;
+            position: absolute;
+            top: 55%;
+            right: -30px;
+        }
+    }
 }
 
 
