--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -1111,6 +1111,26 @@ overflow-y: hidden;
         }
     }
 
+    &__discount{
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 129%;
+        font-feature-settings: 'pnum' on, 'lnum' on;
+        color: #DE4343;
+        margin-left: 26px;
+
+        span{
+            display: block;
+        }
+    }
+
+    &__count{
+        position: relative;
+        width: 100%;
+    }
+
     &-form{
         &__btn{
             text-transform: none !important;
@@ -1138,20 +1158,33 @@ overflow-y: hidden;
     &__imgs{
         flex:5;
         display: flex;
+        border-right: 1px solid #EFEFEF;
+    }
+
+    &__photo{
+        margin:68px 42px 68px 30px;
     }
 
     &__params{
         flex:3;
+        padding:48px 48px 77px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        border-right: 1px solid #EFEFEF;
     }
 
     &__info{
         flex:4;
+        display: flex;
+        flex-direction: column;
+        padding:50px 50px 77px;
     }
 }
 
 .item-slider{
     width: 70px;
-    height: 345px;
+    // height: 345px;
     text-align: center;
 
     .slick-slide{
@@ -1225,6 +1258,64 @@ overflow-y: hidden;
             line-height: 129%;
             font-feature-settings: 'pnum' on, 'lnum' on;
             color: #141622;
+        }
+    }
+}
+
+.item-info{
+    &__top{
+        display: flex;
+        justify-content: space-between;
+        padding-bottom: 29px;
+        border-bottom: 1px solid #EFEFEF;
+    }
+
+    &__mid{
+        display: flex;
+        padding-top: 38px;
+        padding-bottom: 50px;
+    }
+
+    &__bottom{
+        .item-form{
+            width: 100%;
+        }
+    }
+}
+
+.shk-count{
+    width: 100%;
+    height: 55px;
+    background: #FFFFFF;
+    border: 1px solid #A7B1C0;
+    outline:none;
+    text-align: center;
+    font-family: Akrobat;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 24px;
+    line-height: 83%;
+    font-feature-settings: 'pnum' on, 'lnum' on;
+    color: #141622;
+
+    &__button{
+        position: absolute;
+        background: #F6F7F9;
+        width: 15px;
+        height: 15px;
+        color:$blue;
+        font-size: 10px;
+        border:none;
+        outline:none;
+        top:50%;
+        transform: translateY(-50%);
+
+        &.dec{
+            left: 15px;
+        }
+
+        &.inc{
+            right: 15px;
         }
     }
 }
